API y swagger: completos y correctos
