# app/Http/Controllers/Api/ManyToMany/RoomGuestController.php
@@ -37,19 +37,29 @@ class RoomGuestController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/api/room-guests/add-rooms",
+     *     path="/api/room-guests/{guest}/add-rooms",
      *     tags={"RoomGuest"},
      *     summary="Add rooms to a guest",
      *     description="Add rooms to a guest", 
+     *     @OA\Parameter(
+     *        name="guest",
+     *        in="path",
+     *        required=true,
+     *        description="ID of the guest",
+     *        @OA\Schema(
+     *            type="integer",
+     *            format="int64"
+     *        )
+     *     ),
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
-     *             type="object",
-     *             @OA\Property(property="guest_id", type="integer", example=1),
-     *             @OA\Property(property="room_ids", type="array",
-     *                 @OA\Items(type="integer", example=1)
-     *             )
-     *         )
+     *           required={"guest_id", "room_id", "checkInDate", "checkOutDate"},
+     *           @OA\Property(property="guest_id", type="integer", example=1),
+     *           @OA\Property(property="room_id", type="array", @OA\Items(type="integer", example=1)),
+     *           @OA\Property(property="checkInDate", type="string", format="date", example="2021-10-01"),
+     *           @OA\Property(property="checkOutDate", type="string", format="date", example="2021-10-10"),
+     *       )
      *     ),
      *     @OA\Response(
      *         response=200,
@@ -57,28 +67,72 @@ class RoomGuestController extends Controller
      *     )
      * )
      */
-    public function storeRooms(StoreRoomRequest $request)
+    public function storeRooms(Guest $guest, StoreRoomRequest $request, $update = false)
     {
-        $guest = Guest::findOrFail($request->guest_id);
-        $guest->rooms()->sync($request->room_ids);
-        return response()->json($guest->rooms()->get(), 200);
+        $roomIds = $request->validated()['room_id'] ?? [];
+        $errors = []; // Array para acumular los mensajes de error
+
+        // Si estamos en modo actualización, eliminamos todas las habitaciones actuales
+        if ($update) {
+            $guest->rooms()->detach();
+        }
+
+        foreach ($roomIds as $roomId) {
+            $room = Room::findOrFail($roomId);
+            $capacity = $room->type->capacity;
+
+            if ($room->guests()->count() >= $capacity) {
+                // Agregar el mensaje de error al array de errores
+                $errors[] = 'Room ' . $room->number . ' is full';
+            } else {
+                // Añadir el huésped a la habitación
+                $room->guests()->attach($guest->id, [
+                    'checkInDate' => $request->validated()['checkInDate'],
+                    'checkOutDate' => $request->validated()['checkOutDate'],
+                ]);
+            }
+        }
+
+        // Construir la respuesta
+        $response = [
+            'guestRooms' => $guest->rooms,
+        ];
+
+        if (!empty($errors)) {
+            $response['errors'] = $errors;
+            // Devolver la respuesta con un código de estado 400 si hay errores
+            // return response()->json($response, 400);
+        }
+
+        // Devolver la respuesta con un código de estado 200 si no hay errores
+        return response()->json($response, 200);
     }
 
     /**
      * @OA\Post(
-     *     path="/api/room-guests/add-guests",
+     *     path="/api/room-guests/{room}/add-guests",
      *     tags={"RoomGuest"},
      *     summary="Add guests to a room",
      *     description="Add guests to a room",
+     *     @OA\Parameter(
+     *        name="room",
+     *        in="path",
+     *        required=true,
+     *        description="ID of the room",
+     *        @OA\Schema(
+     *            type="integer",
+     *            format="int64"
+     *        )
+     *    ),
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
-     *             type="object",
-     *             @OA\Property(property="room_id", type="integer", example=1),
-     *             @OA\Property(property="guest_ids", type="array",
-     *                 @OA\Items(type="integer", example=1)
-     *             )
-     *         )
+     *           required={"guest_id", "room_id", "checkInDate", "checkOutDate"},
+     *           @OA\Property(property="room_id", type="integer", example=1),
+     *           @OA\Property(property="guest_id", type="array", @OA\Items(type="integer", example=1)),
+     *           @OA\Property(property="checkInDate", type="string", format="date", example="2021-10-01"),
+     *           @OA\Property(property="checkOutDate", type="string", format="date", example="2021-10-10"),
+     *       )
      *     ),
      *     @OA\Response(
      *         response=200,
@@ -86,11 +140,45 @@ class RoomGuestController extends Controller
      *     )
      * )
      */
-    public function storeGuests(StoreGuestRequest $request)
+    public function storeGuests(Room $room, StoreGuestRequest $request, $update = false)
     {
-        $room = Room::findOrFail($request->room_id);
-        $room->guests()->sync($request->guest_ids);
-        return response()->json($room->guests()->get(), 200);
+        // Obtener los IDs de los huéspedes a añadir
+        $guestIds = $request->validated()['guest_id'] ?? [];
+        $capacity = $room->type->capacity;
+        $errors = []; // Array para acumular los mensajes de error
+
+        // Si estamos en modo actualización, eliminamos todos los huéspedes actuales
+        if ($update) {
+            $room->guests()->detach();
+        }
+
+        foreach ($guestIds as $guestId) {
+           if ($room->guests()->count() >= $capacity) {
+               // Agregar el mensaje de error al array de errores
+               $errors[] = 'Could not add guest ' . $guestId . ' to room ' . $room->id . ' because is full';
+               break; // Romper el bucle si la habitación está llena
+            } else {
+               // Añadir el huésped a la habitación
+               $room->guests()->attach($guestId, [
+                  'checkInDate' => $request->validated()['checkInDate'],
+                  'checkOutDate' => $request->validated()['checkOutDate'],
+                ]);
+            }
+        }
+
+        // Construir la respuesta
+        $response = [
+            'roomGuests' => $room->guests,
+        ];
+
+        if (!empty($errors)) {
+            $response['errors'] = $errors;
+            // Devolver la respuesta con un código de estado 400 si hay errores
+            // return response()->json($response, 400);
+        }
+
+        // Devolver la respuesta con un código de estado 200 si no hay errores
+        return response()->json($response, 200);
     }
 
 /**
@@ -129,19 +217,29 @@ class RoomGuestController extends Controller
 
     /**
      * @OA\Put(
-     *     path="/api/room-guests/update-rooms",
+     *     path="/api/room-guests/{guest}/update-rooms",
      *     tags={"RoomGuest"},
      *     summary="Update rooms for a guest",
      *     description="Update rooms for a guest",
+     *     @OA\Parameter(
+     *        name="guest",
+     *        in="path",
+     *        required=true,
+     *        description="ID of the guest",
+     *        @OA\Schema(
+     *            type="integer",
+     *            format="int64"
+     *        )
+     *    ),
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
-     *             type="object",
-     *             @OA\Property(property="guest_id", type="integer", example=1),
-     *             @OA\Property(property="room_ids", type="array",
-     *                 @OA\Items(type="integer", example=1)
-     *             )
-     *         )
+     *           required={"guest_id", "room_id", "checkInDate", "checkOutDate"},
+     *           @OA\Property(property="guest_id", type="integer", example=1),
+     *           @OA\Property(property="room_id", type="array", @OA\Items(type="integer", example=1)),
+     *           @OA\Property(property="checkInDate", type="string", format="date", example="2021-10-01"),
+     *           @OA\Property(property="checkOutDate", type="string", format="date", example="2021-10-10"),
+     *       )
      *     ),
      *     @OA\Response(
      *         response=200,
@@ -149,28 +247,37 @@ class RoomGuestController extends Controller
      *     )
      * )
      */
-    public function updateRooms(StoreRoomRequest $request)
+    public function updateRooms(Guest $guest, StoreRoomRequest $request)
     {
-        $guest = Guest::findOrFail($request->guest_id);
-        $guest->rooms()->sync($request->room_ids);
-        return response()->json($guest->rooms()->get(), 200);
+        return $this->storeRooms($guest, $request, true);
     }
+
 
     /**
      * @OA\Put(
-     *     path="/api/room-guests/update-guests",
+     *     path="/api/room-guests/{room}/update-guests",
      *     tags={"RoomGuest"},
      *     summary="Update guests for a room",
      *     description="Update guests for a room",
+     *     @OA\Parameter(
+     *        name="room",
+     *        in="path",
+     *        required=true,
+     *        description="ID of the room",
+     *        @OA\Schema(
+     *            type="integer",
+     *            format="int64"
+     *        )
+     *    ),
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
-     *             type="object",
-     *             @OA\Property(property="room_id", type="integer", example=1),
-     *             @OA\Property(property="guest_ids", type="array",
-     *                 @OA\Items(type="integer", example=1)
-     *             )
-     *         )
+     *           required={"guest_id", "room_id", "checkInDate", "checkOutDate"},
+     *           @OA\Property(property="room_id", type="integer", example=1),
+     *           @OA\Property(property="guest_id", type="array", @OA\Items(type="integer", example=1)),
+     *           @OA\Property(property="checkInDate", type="string", format="date", example="2021-10-01"),
+     *           @OA\Property(property="checkOutDate", type="string", format="date", example="2021-10-10"),
+     *       )
      *     ),
      *     @OA\Response(
      *         response=200,
@@ -178,11 +285,9 @@ class RoomGuestController extends Controller
      *     )
      * )
      */
-    public function updateGuests(StoreGuestRequest $request)
+    public function updateGuests(Room $room, StoreGuestRequest $request)
     {
-        $room = Room::findOrFail($request->room_id);
-        $room->guests()->sync($request->guest_ids);
-        return response()->json($room->guests()->get(), 200);
+        $this->storeGuests($room, $request, true);
     }
 
     /**
@@ -211,6 +316,7 @@ class RoomGuestController extends Controller
      *    )
      * )
      */
+    
     public function destroy($id)
     {
         $roomguest = RoomGuest::findOrFail($id);
